sb-kh-NGP-TWC/wdp-abstract-canvas#2235 Fix for table overflow issue (#2247)
* Fix for table overflow issue

* Remove broken test

* Add feature test

--- a/canvas_modules/common-canvas/src/common-properties/controls/readonly/readonly.scss
+++ b/canvas_modules/common-canvas/src/common-properties/controls/readonly/readonly.scss
@@ -22,9 +22,9 @@
 		text-overflow: clip;
 	}
 	span {
+		white-space: normal;
 		line-height: 1.5;
 		overflow-wrap: break-word;
-		white-space: normal;
 		&[disabled] {
 			opacity: 0.5;
 		}
@@ -35,6 +35,7 @@
 		text-overflow: ellipsis;
 		white-space: nowrap;
 		span {
+			white-space: nowrap;
 			line-height: 1.5;
 			&[disabled] {
 				opacity: 0.5;
